mypage nearly done & make header

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,9 @@
-메인 페이지
+{% extends "base.html" %}
+
+{% block title %} HOME {% endblock %}
+
+{% block content %} 
+
+<h1>HIHIHIHI</h1>
+
+{% endblock %}
