--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,1 +1,46 @@
-상단바
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
+    <!-- Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    
+    <!-- Bulma -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+
+    <!-- mypage.css -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mypage.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}" />
+
+    <!-- title -->
+    <title> {% block title %} {% endblock %} </title>
+  </head>
+  <body>
+    <nav class="header">
+        <div class="logo">
+            <a href="/">
+                <img src="{{ url_for('static', filename='title.png') }}" />
+            </a>
+        </div>
+        <ul class="menu">
+            <li><a href="/mypage">마이페이지</a></li>
+            <li><a onclick="">로그인</a></li>
+            <li><a href="/user">회원가입</a></li>
+        </ul>
+    </nav>
+    <div class="page">{% block content %} {% endblock %}</div>
+    <div class="modal" id="modal"></div>
+    <script src="{{ url_for('static', filename='js/mypage.js') }}"></script>
+  </body>
+</html>
