회원가입 기능 구현중

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,1 +1,198 @@
-회원가입 페이지
+<!doctype html>
+<html lang="en">
+<head>
+
+    <!-- Webpage Title -->
+    <title>회원가입 페이지</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bulma CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <!-- Font Awesome CSS -->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Google Font CSS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+    <script>
+        function is_email(asValue) {
+            const regExp = /^[a-zA-Z0-9+-\_.]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/;
+            return regExp.test(asValue);
+        }
+
+        function is_password(asValue) {
+            const regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^&*]{8,20}$/;
+            return regExp.test(asValue);
+        }
+
+        function check_dup() {
+            let email = $("#input-email").val()
+            console.log(email)
+
+            // 1.공백일 때
+            if (email == "") {
+                $("#help-email").text("이메일을 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-email").addClass("is-danger").focus()
+                return;
+            }
+
+            // 2.정규표현식 검사
+            if (!is_email(email)) {
+                $("#help-email").text("올바른 이메일 형식이 아닙니다.").removeClass("is-safe").addClass("is-danger")
+                $("#input-email").addClass("is-danger").focus()
+                return;
+            }
+
+            // 3.위 1,2번 통과시
+            $("#input-email").removeclass("is-danger")
+            $("#help-email").removeClass("is-danger").addClass("is-loading")
+            $.ajax({
+                type: "POST",
+                url: "/sign_up/check_dup",
+                data: {
+                    email_give: email
+                },
+                success: function (response) {
+
+                    if (response["exists"]) {
+                        $("#help-email").text("이미 가입된 이메일입니다.").removeClass("is-safe").addClass("is-danger")
+                        $("#input-email").addClass("is-danger").focus()
+                    } else {
+                        $("#help-email").text("사용할 수 있는 이메일입니다.").removeClass("is-danger").addClass("is-success")
+                        $("#input-email").removeClass("is-danger").addClass("is-success").focus()
+                    }
+                    $("#help-email").removeClass("is-loading")
+                }
+            });
+        }
+
+        function sign_up() {
+            let email = $('#input-email').val()
+            let password = $('#input-password').val()
+            let password2 = $('#input-password2').val()
+
+            // 1.이메일 색깔론
+            if ($("#help-email").hasClass("is-danger")) {
+                alert("이메일을 다시 확인해주세요.")
+                return;
+            } else if (!$("#help-id").hasClass("is-success")) {
+                alert("이메일 중복확인을 해주세요.")
+                return;
+            }
+
+            // 2.패스워드 공백일 때
+            if (password == "") {
+                $("#help-password").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password").focus()
+                return;
+            } else if (!is_password(password)) {
+                $("#help-password").text("비밀번호의 형식을 확인해주세요. 영문과 숫자 필수 포함, 특수문자(!@#$%^&*) 사용가능 8-20자").removeClass("is-safe").addClass("is-danger")
+                $("#input-password").focus()
+                return
+            } else {
+                $("#help-password").text("사용할 수 있는 비밀번호입니다.").removeClass("is-danger").addClass("is-success")
+            }
+            if (password2 == "") {
+                $("#help-password2").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password2").focus()
+                return;
+            } else if (password2 != password) {
+                $("#help-password2").text("비밀번호가 일치하지 않습니다.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password2").focus()
+                return;
+            } else {
+                $("#help-password2").text("비밀번호가 일치합니다.").removeClass("is-danger").addClass("is-success")
+            }
+            $.ajax({
+                type: "POST",
+                url: "/sign_up/save",
+                data: {
+                    email_give: email,
+                    password_give: password,
+                    username_give: username
+                },
+                success: function (response) {
+                    alert("분서갱유의 배경은 중앙권력과 지방권력의 갈등으로 보입니다...")
+                    window.location.replace("/")
+                }
+            });
+        }
+    </script>
+
+</head>
+
+<body>
+
+<section class="box" style="max-width: 600px; margin:auto">
+    <div class="field">
+        <label class="label">Username</label>
+        <div class="control has-icons-left has-icons-right">
+            <input id="input-username" class="input" type="text" placeholder="너는 무엇이라 불리우는가?" value="">
+                <span class="icon is-small is-left">
+                    <i class="fas fa-user"></i>
+                </span>
+                <span class="icon is-small is-right">
+                    <i class="fas fa-check"></i>
+                </span>
+        </div>
+    </div>
+
+    <div class="field" style="margin-top: 30px">
+        <label class="label">Email</label>
+        <div class="control has-icons-left has-icons-right">
+            <input id="input-email" class="input" type="email" placeholder="이메일은 약간 모닥불 같아">
+            <span class="icon is-small is-left">
+                <i class="fas fa-envelope"></i>
+            </span>
+            <span class="icon is-small is-right">
+                <i class="fas fa-exclamation-triangle"></i>
+            </span>
+        </div>
+        <p class="help is-safe" id="help-email"></p>
+    </div>
+
+    <div id="btn-check-dup" class="control">
+        <button class="button is-safe" onclick="check_dup()">중복확인</button>
+    </div>
+
+    <div class="field" style="margin-top: 50px">
+        <label class="label">Password</label>
+        <div class="control has-icons-left">
+            <input id="input-password" class="input" type="password" placeholder="비밀번호를 넘겨">
+
+        </div>
+        <p id="help-password" class="help">
+            영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도 사용가능합니다.
+        </p>
+    </div>
+
+    <div class="field">
+        <div class="control has-icons-left" style="width:100%">
+            <input id="input-password2" class="input" type="password"
+                   placeholder="비밀번호 재입력">
+            <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
+        </div>
+        <p id="help-password2" class="help">비밀번호를 다시 한 번 입력해주세요.</p>
+    </div>
+
+    <div class="field is-grouped">
+        <div class="control">
+            <button class="button is-link" onclick="sign_up()">회원가입</button>
+        </div>
+        <div class="control">
+            <button class="button is-link is-light" onclick="window.location.replace('/')">취소</button>
+        </div>
+    </div>
+</section>
+
+</body>
+</html>
+
