--- a/app/templates/modals/signin.html
+++ b/app/templates/modals/signin.html
@@ -1,1 +1,115 @@
-로그인창
+<!doctype html>
+<html lang="en">
+<head>
+
+    <!-- Webpage Title -->
+    <title>로그인 페이지</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bulma CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <!-- Font Awesome CSS -->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Google Font CSS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+    <script>
+        function sign_in() {
+            let email = $("#input-email").val()
+            let password = $("#input-password").val()
+
+            if (email == "") {
+                $("#help-email").text("아이디를 입력해주세요.")
+                $("#input-email").focus()
+                return;
+            } else {
+                $("#help-email").text("")
+            }
+
+            if (password == "") {
+                $("#help-password").text("비밀번호를 입력해주세요.")
+                $("#input-password").focus()
+                return;
+            } else {
+                $("#help-password").text("")
+            }
+            $.ajax({
+                type: "POST",
+                url: "/sign_in",
+                data: {
+                    email_give: email,
+                    password_give: password
+                },
+                success: function (response) {
+                    if (response['result'] == 'success') {
+                        $.cookie('mytoken', response['token'], {path: '/'});
+                        window.location.replace("/")
+                    } else {
+                        alert(response['msg'])
+                    }
+                }
+            });
+        }
+
+    </script>
+</head>
+
+<body>
+<button onclick='$("#modal-post").addClass("is-active")'>test</button>
+<div class="modal" id="modal-post">
+    <div class="modal-background" onclick='$("#modal-post").removeClass("is-active")'></div>
+    <div class="modal-content">
+        <div class="box">
+            <div class="field">
+                <p class="control">
+                    <label class="label">Email</label>
+                <div class="control has-icons-left has-icons-right">
+                    <input id="input-email" class="input" type="text" placeholder="너가 가입한 이메일을 적어라" value="">
+                    <p id="help-email" class="help"></p>
+                </div>
+                </p>
+            </div>
+
+            <div class="field">
+                <p class="control">
+                    <label class="label">Password</label>
+                <div class="control has-icons-left has-icons-right">
+                    <input id="input-password" class="input" type="text" placeholder="너의 소중한 비번을 넘겨라" value="">
+                    <p id="help-password" class="help"></p>
+                </div>
+                </p>
+            </div>
+
+            <nav class="level is-mobile">
+                <div class="level-left">
+
+                </div>
+                <div class="level-right">
+                    <div class="level-item">
+                        <a class="button is-sparta" onclick="sign_in()">로그인</a>
+                    </div>
+                    <div class="level-item">
+                        <a class="button is-sparta is-outlined"
+                           onclick='$("#modal-post").removeClass("is-active")'>취소</a>
+                    </div>
+                </div>
+            </nav>
+
+        </div>
+    </div>
+    <button class="modal-close is-large" aria-label="close"
+            onclick='$("#modal-post").removeClass("is-active")'></button>
+</div>
+
+
+</body>
+</html>
