--- a/app/templates/mypage.html
+++ b/app/templates/mypage.html
@@ -8,7 +8,7 @@
       <div class="profile">
         <img class="my-image" src="{{ url_for('static', filename='/profile_default.png') }}" />
         <a>{{ user.username }}</a>
-        <button type="button" class="btn btn-outline-secondary" onclick="mypageProfile()">프로필 수정</button>
+        <button type="button" class="btn btn-outline-secondary" onclick="test()">프로필 수정</button>
       </div>
       <div class="divide-line vertical"></div>
       <div class="my-reviews" id="my-reviews">
