--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -18,7 +18,6 @@
 }
 
 
-
 .header > .menu {
     border: 1px solid red;
 
@@ -32,4 +31,10 @@
 .header > .menu > li {
     margin: 0px 5px 5px 0px;
     /* cursor: pointer; */
+}
+
+
+.modal-content {
+    width: 600px;
+    max-width: 80%;
 }
