--- a/app/templates/modals/profile.html
+++ b/app/templates/modals/profile.html
@@ -33,18 +33,22 @@
                         <label class="label" for="input-pic">프로필 사진</label>
 
                         <div class="control is-expanded">
-                            <div class="file has-name">
+                            <div class="input-group mb-3">
+                                <input type="file" class="form-control" id="input-image">
+                                <label class="input-group-text" for="input-image"></label>
+                            </div>
+                            <!-- <div id="file-image" class="file">
                                 <label class="file-label" style="width:100%">
                                     <input id="input-pic" class="file-input" type="file"
                                            name="resume">
-                                    <span class="file-cta"><span class="file-icon"><i
-                                            class="fa fa-upload"></i></span>
-                                <span class="file-label">파일 선택</span>
-                            </span>
+                                    <span class="file-cta">
+                                        <span class="file-icon"><i class="fa fa-upload"></i></span>
+                                        <span class="file-label">파일 선택</span>
+                                    </span>
                                     <span id="file-name" class="file-name"
                                           style="width:100%;max-width:100%"></span>
                                 </label>
-                            </div>
+                            </div> -->
 
                         </div>
                     </div>
@@ -63,7 +67,7 @@
                         </div>
                         <div class="level-right">
                             <div class="level-item">
-                                <a class="button is-sparta" onclick="update_profile()">업데이트</a>
+                                <a class="button is-sparta" onclick="mypageProfileUpdate()">업데이트</a>
                             </div>
                             <div class="level-item">
                                 <a class="button is-sparta is-outlined"
