--- a/app/templates/mypage.html
+++ b/app/templates/mypage.html
@@ -2,6 +2,10 @@
 
 {% block title %} 마이페이지 {% endblock %}
 
+{% block content %}{% extends "base.html" %}
+
+{% block title %} 마이페이지 {% endblock %}
+
 {% block content %}
 <div class="container">
   <div class="upper-wrapper">
