--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,8 @@
 
     <!-- Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+        
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -38,7 +39,7 @@
         </div>
         <ul class="menu">
             <li><a href="/mypage">마이페이지</a></li>
-            <li><a onclick="">로그인</a></li>
+            <li><a onclick="testlogin()">로그인</a></li>
             <li><a href="/user">회원가입</a></li>
         </ul>
     </nav>
