--- a/app/templates/mypage.html
+++ b/app/templates/mypage.html
@@ -8,13 +8,12 @@
       <div class="profile">
         <img class="my-image" src="{{ url_for('static', filename='/profile_default.png') }}" />
         <a>{{ user.username }}</a>
-        <button type="button" class="btn btn-outline-secondary" onclick="mypageProfile()">프로필 수정</button>
+        <button type="button" class="btn btn-outline-secondary" onclick="test()">프로필 수정</button>
       </div>
       <div class="divide-line vertical"></div>
       <div class="my-reviews" id="my-reviews">
 
-        <div class="card my-review-card">
-          <!-- <h5 class="card-title">리뷰 제목</h5> -->
+        <!-- <div class="card my-review-card">
           <div class="card-body">
             <blockquote class="blockquote mb-0">
               <a>책 리뷰 책 리뷰 책 리뷰 와 재미있다!!</a>
@@ -23,7 +22,6 @@
           </div>
         </div>
         <div class="card my-review-card">
-          <!-- <h5 class="card-title">리뷰 제목</h5> -->
           <div class="card-body">
             <blockquote class="blockquote mb-0">
               <a>책 리뷰 책 리뷰 책 리뷰 와 재미있다!!</a>
@@ -32,7 +30,6 @@
           </div>
         </div>
         <div class="card my-review-card">
-          <!-- <h5 class="card-title">리뷰 제목</h5> -->
           <div class="card-body">
             <blockquote class="blockquote mb-0">
               <a>책 리뷰 책 리뷰 책 리뷰 와 재미있다!!</a>
@@ -41,7 +38,6 @@
           </div>
         </div>
         <div class="card my-review-card">
-          <!-- <h5 class="card-title">리뷰 제목</h5> -->
           <div class="card-body">
             <blockquote class="blockquote mb-0">
               <a>책 리뷰 책 리뷰 책 리뷰 와 재미있다!!</a>
@@ -50,14 +46,13 @@
           </div>
         </div>
         <div class="card my-review-card">
-          <!-- <h5 class="card-title">리뷰 제목</h5> -->
           <div class="card-body">
             <blockquote class="blockquote mb-0">
               <a>책 리뷰 책 리뷰 책 리뷰 와 재미있다!!</a>
               <footer class="blockquote-footer"><cite title="Source Title">작성자 (2022-09-20 10:53)</cite></footer>
             </blockquote>
           </div>
-        </div>
+        </div> -->
 
       </div>
   </div>
@@ -65,7 +60,7 @@
   <div class="lower-wrapper">
       <div class="my-likes row" id="my-likes">
 
-        <div class="card my-likes-card" style="width: 18rem;">
+        <!-- <div class="card my-likes-card" style="width: 18rem;">
           <img src="https://shopping-phinf.pstatic.net/main_3246229/32462294729.20220527030642.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">아몬드 (손원평 장편소설)</h5>
@@ -136,7 +131,7 @@
             </div>                
             <i class="bi bi-hand-thumbs-up-fill" onclick="bookLikesToggler()">10</i>
             </div>
-        </div>
+        </div> -->
 
       </div>
   </div>
