--- a/app/templates/modals/profile.html
+++ b/app/templates/modals/profile.html
@@ -20,13 +20,13 @@
                     <div class="field">
                         <label class="label" for="input-password">password</label>
                         <p class="control">
-                            <input id="input-password" class="input" value="">
+                            <input id="input-password" class="input" type="password" value="">
                         </p>
                     </div>
                     <div class="field">
                         <label class="label" for="input-password2">password2</label>
                         <p class="control">
-                            <input id="input-password2" class="input" value="">
+                            <input id="input-password2" class="input" type="password" value="">
                         </p>
                     </div>
                     <div class="field">
